--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ li:hover{
     color:#D01418;
     font-size: 24px;
 }
+
+
 /*main*/
 .heroe{
     background-image: url("../img/banner.png");
@@ -120,13 +122,13 @@ button{
 
 }
 .card_silla{
-    background-image: url(/img/silla_gamer.png);
+    background-image: url(img/silla_gamer.png);
     background-repeat: no-repeat;
     
 
 }
 .card_computadora{
-    background-image: url(/img/computadoras.png);
+    background-image: url(img/computadoras.png);
     background-repeat: no-repeat;
     
 
