--- a/css/style.css
+++ b/css/style.css
@@ -122,13 +122,13 @@ button{
 
 }
 .card_silla{
-    background-image: url(img/silla_gamer.png);
+    background-image: url(../img/silla_gamer.png);
     background-repeat: no-repeat;
     
 
 }
 .card_computadora{
-    background-image: url(img/computadoras.png);
+    background-image: url(../img/silla_gamer.png);
     background-repeat: no-repeat;
     
 
